Improved the experience on mobile devices slightely: On tiny screens, the map will not be shown. And on orientation changes, the map will be repositioned. Still a far cry from mobile support, though. Addresses issue #2, even though the root problem for that lay in the css of the project page.

--- a/gridscrolling.css
+++ b/gridscrolling.css
@@ -17,6 +17,12 @@
     border: solid 1px black;
 }
 
+@media (max-width: 1000px) {
+    #gridscrolling-overview {
+	background-color: grey;
+    }
+}
+
 .gridscrolling-marker {
     position: fixed;
     width: 0;
